# swagger/v1/swagger.yaml
@@ -2,12 +2,11 @@ openapi: 3.0.0
 
 info:
   title: Ruby App API
-  description: API documentation for the Ruby App
+  description: API documentation for the Sfooty football application 
   version: 1.0.0
 
-
 paths:
-  /v1/users:
+  /api/v1/users:
     post:
       summary: Create a new user
       description: Creates a new user account.
@@ -18,7 +17,10 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserRegistration'
+              type: object
+              properties:
+                user:
+                  $ref: '#/components/schemas/UserRegistration'
       responses:
         '201':
           description: User created successfully
@@ -35,7 +37,7 @@ paths:
                 properties:
                   error:
                     type: string
-  
+ 
     get:
       summary: Get all users
       description: Returns a list of all users.
@@ -59,9 +61,8 @@ paths:
                 properties:
                   error:
                     type: string
-    
-
-  /v1/users/sign_in:
+   
+  /api/v1/users/sign_in:
     post:
       summary: Sign in user
       description: Authenticates a user and returns an access token.
@@ -93,7 +94,7 @@ paths:
                   error:
                     type: string
 
-  /v1/users/sign_out:
+  /api/v1/users/sign_out:
     delete:
       summary: Sign out user
       description: Logs out a user.
@@ -112,7 +113,7 @@ paths:
                   error:
                     type: string
 
-  /v1/users/password:
+  /api/v1/users/password:
     put:
       summary: Update user password
       description: Updates a user's password.
@@ -127,8 +128,8 @@ paths:
               properties:
                 user:
                   $ref: '#/components/schemas/UserPasswordUpdate'
-      security: 
-        -BearerAuth: []
+      security:
+        - BearerAuth: []
       responses:
         '200':
           description: Password updated successfully
@@ -142,7 +143,7 @@ paths:
                   error:
                     type: string
 
-  /v1/users/{id}:
+  /api/v1/users/{id}:
     get:
       summary: Get user by ID
       description: Returns a user by ID.
@@ -188,6 +189,170 @@ paths:
           description: User deleted successfully
         '404':
           description: User not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+
+  /api/v1/users/{user_id}/leagues:
+    get:
+      summary: Get all leagues
+      description: Retrieve a list of all leagues for a specific user.
+      parameters:
+        - in: path
+          name: user_id
+          required: true
+          schema:
+            type: integer
+          description: ID of the user.
+      responses:
+        '200':
+          description: List of leagues
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Leagues'
+
+    post:
+      summary: Create a new league
+      description: Create a new league for a specific user.
+      parameters:
+        - in: path
+          name: user_id
+          required: true
+          schema:
+            type: integer
+          description: ID of the user.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewLeague'
+      responses:
+        '201':
+          description: League created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Leagues'
+        '422':
+          description: Unprocessable entity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+
+  /api/v1/users/{user_id}/leagues/{id}:
+    get:
+      summary: Get league by ID
+      description: Retrieve details of a specific league by its ID.
+      parameters:
+        - in: path
+          name: user_id
+          required: true
+          schema:
+            type: integer
+          description: ID of the user.
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+          description: ID of the league.
+      responses:
+        '200':
+          description: League details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Leagues'
+        '404':
+          description: League not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+
+    patch:
+      summary: Update league by ID
+      description: Update details of a specific league by its ID.
+      parameters:
+        - in: path
+          name: user_id
+          required: true
+          schema:
+            type: integer
+          description: ID of the user.
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+          description: ID of the league.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewLeague'
+      responses:
+        '200':
+          description: League updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Leagues'
+        '422':
+          description: Unprocessable entity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+
+    delete:
+      summary: Delete league by ID
+      description: Delete a specific league by its ID.
+      parameters:
+        - in: path
+          name: user_id
+          required: true
+          schema:
+            type: integer
+          description: ID of the user.
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+          description: ID of the league.
+      responses:
+        '200':
+          description: League deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: League deleted successfully!
+        '422':
+          description: Unprocessable entity
           content:
             application/json:
               schema:
@@ -295,6 +460,62 @@ components:
         - username
         - user_photo
 
+    NewLeague:
+      type: object
+      properties:
+        league_name:
+          type: string
+          description: The name of the league.
+        country:
+          type: string
+          description: The country of the league.
+        tier_level:
+          type: integer
+          description: The tier level of the league.
+        description:
+          type: string
+          description: A description of the league.
+        league_photo:
+          type: string
+          description: The photo of the league.
+      required:
+        - league_name
+        - country
+        - tier_level
+
+    Leagues:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        league_name:
+          type: string
+          example: Premier League
+        country:
+          type: string
+          example: England
+        tier_level:
+          type: integer
+          example: 1
+        description:
+          type: string
+          example: "Top tier of English football"
+        league_photo:
+          type: string
+          example: "https://example.com/photo.jpg"
+        user_id:
+          type: integer
+          example: 1
+        created_at:
+          type: string
+          format: date-time
+          example: "2023-10-29T12:34:56Z"
+        updated_at:
+          type: string
+          format: date-time
+          example: "2023-10-29T12:34:56Z"
+
   securitySchemes:
     BearerAuth:
       type: apiKey
@@ -302,5 +523,5 @@ components:
       in: header
       description: Enter your Bearer token in the format 'Bearer {token}'
 
-security: 
+security:
   - BearerAuth: []
